<resources>
    <string name="app_name">Petgram</string>

    <string name="publicar" formatted="true">Publicar</string>
    <string name="petgram">PetGram</string>
    <string name="cadastre_se_aqui">Cadastre-se Aqui.</string>
    <string name="caso_j_seja_cadastrado_clique_no_bot_o_abaixo_para_logar">Caso já seja cadastrado, clique aqui para LOGAR!</string>
    <string name="crie_sua_conta_aqui_gr_tis">Crie sua conta aqui grátis.</string>
    <string name="conecte_se_a_rede_que_mostrar_as_criaturas_mais_puras_e_mais_fofas_do_mundo_encontre_um_pet_friend_para_seu_pet_quem_sabe_voc_n_o_encontra_seu_pet_romance">Conecte-se a rede que mostrará as criaturas mais puras e mais fofas do mundo. Encontre um PET FRIEND para seu pet. Quem sabe você não encontra seu pet romance?!</string>
    <string name="esqueceu_a_senha_clique_aqui">Esqueceu a senha? Clique aqui!</string>
    <string name="email">Email</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="_0">0</string>
    <string name="f_s">Fãs</string>
    <string name="clientes">Clientes</string>
    <string name="fotos">Fotos</string>
    <string name="perfil">Perfil</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="home">Home</string>
    <string name="usuarios">Usuarios</string>
    <string name="postar">Postar</string>
    <string name="deseja_sair_app">Deseja sair do app?</string>
    <string name="deseja_sair_app_message">Deseja mesmo, mesmo, meeeesmo sair do app?\nAinda existem várias fotos de pets para você se deliciar!</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sair">Sair</string>
    <string name="defaulty">Defaulty</string>
    <string name="gostei">Gostei</string>
    <string name="comentar">Comentar</string>
    <string name="_0_curtidas">0 Curtidas</string>
    <string name="descri_o_default">Descrição Default</string>
    <string name="filtro">Filtro</string>
    <string name="nome_usuario">Nome Usuario</string>
    <string name="foto_sem_desc">Foto sem descrição.</string>
    <string name="descri_o">Descrição</string>
    <string name="idade">Idade</string>
    <string name="peso">Peso</string>
    <string name="altura_em_cent_metros">Altura (em centímetros)</string>
    <string name="local">Local</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="entrar">Entrar</string>
</resources>
