<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/perfil_bottom"
            android:icon="@drawable/ic_pessoa_usuario"
        android:title="@string/perfil"
            />

    <item android:id="@+id/pesquisar_bottom"
        android:icon="@drawable/ic_search_pesquisar"
        android:title="@string/pesquisar" />
    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/ic_foguinho"
        android:title="@string/home"
        />

         <item android:id="@+id/usuarios_bottom"
        android:icon="@drawable/ic_genero"
             android:title="@string/usuarios"
        />


        <item android:id="@+id/contato_bottom"
            android:icon="@drawable/ic_add_foto"
            android:title="@string/postar" />



</menu>