<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:padding="5dp"
        android:text="@string/crie_sua_conta_aqui_gr_tis"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:padding="5dp"
        android:text="@string/conecte_se_a_rede_que_mostrar_as_criaturas_mais_puras_e_mais_fofas_do_mundo_encontre_um_pet_friend_para_seu_pet_quem_sabe_voc_n_o_encontra_seu_pet_romance"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/textoCadastrar_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/botao_transparente_shape"
        android:onClick="botaoCadastrarLauncher"
        android:text="@string/cadastre_se_aqui"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textDescricao_launcher_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/caso_j_seja_cadastrado_clique_no_bot_o_abaixo_para_logar"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:onClick="botaoLogarLauncher"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoCadastrar_launcher" />


</androidx.constraintlayout.widget.ConstraintLayout>