<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.usuario.LoginActivity"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_degrade"
        android:backgroundTintMode="add"
        tools:context=".activities.usuario.LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="432dp"
            android:layout_height="180dp"
            android:layout_marginTop="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logonovacirc" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_id_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/botao_logar_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/botao_transparente_shape"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/entrar"
            android:textColor="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha_id_login" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/botao_logar_google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar_login"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:buttonSize="wide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_login" />

        <TextView
            android:id="@+id/esqueceu_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/botao_logar_login"
            android:layout_marginTop="8dp"
            android:padding="20dp"
            android:text="@string/esqueceu_a_senha_clique_aqui"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botao_logar_google_login" />

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progressBackgroundTintMode="screen"
            android:visibility="gone"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botao_logar_login" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha_id_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_id_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>